popular menu section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,9 +133,60 @@ header {
                     margin-top: 3.75rem; /* 60px */
                 }
             }
-
         }
-
     }
 }
 
+/* Popular Menu Section */
+
+.popular-menu {
+    background: url(../img/popular-bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 800px;
+    color: var(--black);
+    overflow: hidden;
+
+    .popular-menu-title {
+        margin: 3rem 0;
+        text-align: center;
+
+        h2 {
+            font-size: clamp(2rem, 10vw, 3.875rem);
+            text-transform: uppercase;
+        }
+
+        p {
+            font-size: clamp(1rem, 10vw, 1.625rem);
+        }
+
+    }
+
+    .popular-menu-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        gap: 3rem;
+
+        .popular-menu-item {
+            text-align: center;
+
+            img {
+                width: 100%;
+            }
+
+            h3 {
+                font-size: clamp(1rem, 10vw, 2rem);
+                margin: 1rem 0;
+            }
+
+            p {
+                font-size: clamp(1rem, 10vw, 1.25rem);
+            }
+        }
+    }
+
+    @media screen and (max-width: 768px)  {
+        height: auto;
+        padding: 3rem 0;
+    }
+}
